; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net/extr_if_vxlan.c_vxlan_socket_remove_softc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net/extr_if_vxlan.c_vxlan_socket_remove_softc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vxlan_socket = type { i32 }
%struct.vxlan_softc = type { i32 }

@vxl_entry = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vxlan_socket*, %struct.vxlan_softc*)* @vxlan_socket_remove_softc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vxlan_socket_remove_softc(%struct.vxlan_socket* %0, %struct.vxlan_softc* %1) #0 {
  %3 = alloca %struct.vxlan_socket*, align 8
  %4 = alloca %struct.vxlan_softc*, align 8
  store %struct.vxlan_socket* %0, %struct.vxlan_socket** %3, align 8
  store %struct.vxlan_softc* %1, %struct.vxlan_softc** %4, align 8
  %5 = load %struct.vxlan_socket*, %struct.vxlan_socket** %3, align 8
  %6 = call i32 @VXLAN_SO_WLOCK(%struct.vxlan_socket* %5)
  %7 = load %struct.vxlan_softc*, %struct.vxlan_softc** %4, align 8
  %8 = load i32, i32* @vxl_entry, align 4
  %9 = call i32 @LIST_REMOVE(%struct.vxlan_softc* %7, i32 %8)
  %10 = load %struct.vxlan_socket*, %struct.vxlan_socket** %3, align 8
  %11 = call i32 @VXLAN_SO_WUNLOCK(%struct.vxlan_socket* %10)
  %12 = load %struct.vxlan_softc*, %struct.vxlan_softc** %4, align 8
  %13 = call i32 @vxlan_release(%struct.vxlan_softc* %12)
  ret void
}

declare dso_local i32 @VXLAN_SO_WLOCK(%struct.vxlan_socket*) #1

declare dso_local i32 @LIST_REMOVE(%struct.vxlan_softc*, i32) #1

declare dso_local i32 @VXLAN_SO_WUNLOCK(%struct.vxlan_socket*) #1

declare dso_local i32 @vxlan_release(%struct.vxlan_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
